[package]
name = "braidpool_assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = "0.12.0"
tokio = { version = "1", features = ["full"] }
bitcoin = "0.28"
rand = "0.8.5"
hex = "0.4"